--- a/Make P5 Sing!/index.html
+++ b/Make P5 Sing!/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <script src="js/p5.js"></script>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.37/Tone.js" integrity="sha512-gK8OnTXn8cTYkHqYX+bhzjQ1rClAPuG2eMy+oRuV26mSuE0EbZeULFKdyc/YGX1Z/JsC06FXxQttdX4aahjSMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
     <script src="js/Tone.js"></script>
-
+    <script>
+        src = "js/p5.sound.js"
+    </script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8">
 
@@ -14,7 +16,6 @@
 
 <body>
     <script src="js/sketch.js"></script>
-
 
 </body>
 
